Add Java Threads and Java Collections notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ LinkedList/Linked List Interview .pdf
 LinkedList/LL_Java.pdf
 *.class
 Binary_Search_Trees/output
+
+Java Threads/Java Threads Introductions.ipynb
+Java Collections/Introduction.ipynb
