Add Question.xlsx to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Binary_Search_Trees/output
 
 Java Threads/Java Threads Introductions.ipynb
 Java Collections/Introduction.ipynb
+Question Sheet/Question.xlsx
